cmake_minimum_required(VERSION 3.22)
project(MyChallenge)

set(CMAKE_CXX_STANDARD 14)

add_executable(MyChallenge main.cpp day2/romanToInt.cpp day2/longestCommonPrefix.cpp day3/BusToUdayland.cpp day3/Far.cpp day3/mergeTwoLists.cpp day3/maximumUnits.cpp day4/Burning_Midnight.cpp day4/Circle_line.cpp day4/MaxArea.cpp day4/removeDuplicates.cpp day5/Mashmokh_and_Tokens.cpp day5/Choosing_Teams.cpp day5/WiggleMaxLength.cpp day5/removeElement.cpp day6/Wizards.cpp day6/Combination_Lock.cpp day6/Candy.cpp day6/isValid.cpp day7/Mashmokh_and_Lights.cpp day7/Triangular_numbers.cpp day7/longestConsecutive.cpp day7/binaryAddithin.cpp)
